crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__conditional-break-labeled.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/conditional-break-labeled.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
/**
* props.b *does* influence `a`
*/
function Component(props) {
	const $ = _c(5);
	let a;
	if ($[0] !== props.a || $[1] !== props.b || $[2] !== props.c || $[3] !== props.d) {
		a = [];
		a.push(props.a);
		bb0: {
			if (props.b) {
				break bb0;
			}
			a.push(props.c);
		}
		a.push(props.d);
		$[0] = props.a;
		$[1] = props.b;
		$[2] = props.c;
		$[3] = props.d;
		$[4] = a;
	} else {
		a = $[4];
	}
	return a;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
