crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__early-return-nested-early-return-within-reactive-scope.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/early-return-nested-early-return-within-reactive-scope.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
function Component(props) {
	const $ = _c(7);
	let t0;
	if ($[0] !== props.a || $[1] !== props.b || $[2] !== props.cond) {
		t0 = Symbol.for("react.early_return_sentinel");
		bb0: {
			const x = [];
			if (props.cond) {
				x.push(props.a);
				if (props.b) {
					let t1;
					if ($[4] !== props.b) {
						t1 = [props.b];
						$[4] = props.b;
						$[5] = t1;
					} else {
						t1 = $[5];
					}
					const y = t1;
					x.push(y);
					t0 = x;
					break bb0;
				}
				t0 = x;
				break bb0;
			} else {
				let t1;
				if ($[6] === Symbol.for("react.memo_cache_sentinel")) {
					t1 = foo();
					$[6] = t1;
				} else {
					t1 = $[6];
				}
				t0 = t1;
				break bb0;
			}
		}
		$[0] = props.a;
		$[1] = props.b;
		$[2] = props.cond;
		$[3] = t0;
	} else {
		t0 = $[3];
	}
	if (t0 !== Symbol.for("react.early_return_sentinel")) {
		return t0;
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		cond: true,
		a: 42,
		b: 3.14
	}]
};
