crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__error.todo-optional-member-expression-with-conditional-optional.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/error.todo-optional-member-expression-with-conditional-optional.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] PreserveManualMemo: Existing memoization could not be preserved", labels: [LabeledSpan { label: Some("Could not preserve existing manual memoization"), span: Span { start: 207, end: 332 }, primary: false }], help: Some("React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. The inferred dependencies did not match the manually specified dependencies, which could cause the value to change more or less frequently than expected. The inferred dependency was `props.items`, but the source dependencies were [props?.items, props.cond]. Inferred different dependency than source"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
