crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__infer-component-props-non-null.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/infer-component-props-non-null.tsx
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
import { identity, Stringify } from "shared-runtime";
function Foo(props) {
	const $ = _c(5);
	let t0;
	if ($[0] !== props.cond || $[1] !== props.value) {
		const arr = [];
		if (props.cond) {
			let t1;
			if ($[3] !== props.value) {
				t1 = identity(props.value);
				$[3] = props.value;
				$[4] = t1;
			} else {
				t1 = $[4];
			}
			arr.push(t1);
		}
		t0 = <Stringify arr={arr} />;
		$[0] = props.cond;
		$[1] = props.value;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{
		value: 2,
		cond: true
	}]
};
