crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__infer-sequential-optional-chain-nonnull.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/infer-sequential-optional-chain-nonnull.ts
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
function useFoo(t0) {
	const $ = _c(2);
	const { a } = t0;
	let x;
	if ($[0] !== a.b.c.d.e) {
		x = [];
		x.push(a?.b.c?.d.e);
		x.push(a.b?.c.d?.e);
		$[0] = a.b.c.d.e;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{ a: null }],
	sequentialRenders: [
		{ a: null },
		{ a: null },
		{ a: {} },
		{ a: { b: { c: { d: { e: 42 } } } } },
		{ a: { b: { c: { d: { e: 43 } } } } },
		{ a: { b: { c: { d: { e: undefined } } } } },
		{ a: { b: undefined } }
	]
};
